examples/misc/error/compilation/eval_wdt_list.bfml
let main = [
  **let l = 1 :: 2 in $
]